new modification intro.tex as test

--- a/rapport/intro.tex
+++ b/rapport/intro.tex
@@ -11,5 +11,5 @@
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \author{Aurélie LeLièvre \\ Saraï Mola \\ Typhaine Paysan-Lafosse \\ Joris Sansen}
 \begin{document}
-•
+\maketitle
 \end{document}
