--- a/rapport/intro.tex
+++ b/rapport/intro.tex
@@ -1,10 +1,15 @@
 \section*{Introduction}
-Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
+
+Dans le cadre de l'UE Data Mining, nous avons pour projet de réaliser une étude sur la question suivante : "Quelles sont les protéines similaires" en utilisant les techiques et informations obtenues tout au long des cours et travaux dirigés.
+%Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
 
 Le data mining, ou exploration de données, est une technique ayant pour but d'extraire des informations particulières ou des motifs intéressants à partir d'une grande quantité de données à l'aide de plusieurs types de méthodes.
 
-Son utilisation ne s'arrête pas seulement au monde de la bio-informatique , bien au contraire, elle est fréquemment utilisée dans divers autres secteurs tels que la vente, le domaine bancaire ou encore le monde des assurances.
-Contrairement aux méthodes statistiques souvent utilisées, le data mining n'a pas besoin de connaître une hypothèse de départ pour arriver à des résultats. En effet, cette méthode  d'analyse de données utilise un pré-traitement des données qui permet la structuration et donc l'extraction de connaissances de façon beaucoup plus aisée. Le pré-traitement en question est divisé en plusieurs étapes. Celles-ci sont :
+Ces techniques, tout d'abord utilisées dans le domaine du marketing, le secteur bancaire et assurance a par la suite été appliqué dans l'informatique et plus particulierement en bio-informatique. En effet, cela permet d'analyser et de trouver des informations intéressantes (motifs répétés ou au contraire hors-champs (out-layer))
+
+%Son utilisation ne s'arrête pas seulement au monde de la bio-informatique , bien au contraire, elle est fréquemment utilisée dans divers autres secteurs tels que la vente, le domaine bancaire ou encore le monde des assurances.
+L'interet de telles techniques tient particulierment au fait qu'elles n'ont pas besoin de connaitre une hypothèse de départ pour obtenir des résultats exploitables. En effet, cette méthode d'analyse utilise un pré-traitement des données qui permet la structuration et donc l'extraction de connaissances de façon plus aisée. Le pré-traitement en question se déroule en plusieurs étapes, celles-ci sont:
+%Contrairement aux méthodes statistiques souvent utilisées, le data mining n'a pas besoin de connaître une hypothèse de départ pour arriver à des résultats. En effet, cette méthode  d'analyse de données utilise un pré-traitement des données qui permet la structuration et donc l'extraction de connaissances de façon beaucoup plus aisée. Le pré-traitement en question est divisé en plusieurs étapes. Celles-ci sont :
 \begin{description}
 \item[extraction]il faut d'abord récupérer les données à partir de sources, potentiellement multiples, hétérogènes et externes si cela n'a pas été fait au préalable.
 \item[nettoyage]il s'agit ensuite de détecter les anomalies éventuellement présentes dans le jeu de données constitué et d'y remédier.
