--- a/rapport/intro.tex
+++ b/rapport/intro.tex
@@ -1,21 +1,27 @@
 \section*{Introduction}
 
-Dans le cadre de l'UE Data Mining, nous avons pour projet de réaliser une étude sur la question suivante : "Quelles sont les protéines similaires" en utilisant les techiques et informations obtenues tout au long des cours et travaux dirigés.
+
+\setcounter{page}{2}
+\addcontentsline{toc}{chapter}{Introduction}
+
+Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
+
+Dans le cadre de l'UE Data Mining, nous avons pour projet de réaliser une étude sur la question suivante : "Quelles sont les protéines similaires" en utilisant les techniques et informations obtenues tout au long des cours et travaux dirigés.
 %Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
 
 Le data mining, ou exploration de données, est une technique ayant pour but d'extraire des informations particulières ou des motifs intéressants à partir d'une grande quantité de données à l'aide de plusieurs types de méthodes.
 
-Ces techniques, tout d'abord utilisées dans le domaine du marketing, le secteur bancaire et assurance a par la suite été appliqué dans l'informatique et plus particulierement en bio-informatique. En effet, cela permet d'analyser et de trouver des informations intéressantes (motifs répétés ou au contraire hors-champs (out-layer))
+Ces techniques, tout d'abord utilisées dans le domaine du marketing, le secteur bancaire et assurance ont par la suite été appliquées dans l'informatique et plus particulièrement en bio-informatique. En effet, cela permet d'analyser et de trouver des informations intéressantes (motifs répétés ou au contraire hors-champs (out-layer)) à partir des bases de données biologiques (protéines, gènes, etc)
 
 %Son utilisation ne s'arrête pas seulement au monde de la bio-informatique , bien au contraire, elle est fréquemment utilisée dans divers autres secteurs tels que la vente, le domaine bancaire ou encore le monde des assurances.
-L'interet de telles techniques tient particulierment au fait qu'elles n'ont pas besoin de connaitre une hypothèse de départ pour obtenir des résultats exploitables. En effet, cette méthode d'analyse utilise un pré-traitement des données qui permet la structuration et donc l'extraction de connaissances de façon plus aisée. Le pré-traitement en question se déroule en plusieurs étapes, celles-ci sont:
+L'inter\^et de telles techniques tient particulièrement au fait qu'elles n'ont pas besoin de connaître une hypothèse de départ pour obtenir des résultats exploitables. En effet, cette méthode d'analyse utilise un pré-traitement des données qui permet la structuration et donc l'extraction de connaissances de façon plus aisée. Le pré-traitement en question se déroule en plusieurs étapes, celles-ci sont:
 %Contrairement aux méthodes statistiques souvent utilisées, le data mining n'a pas besoin de connaître une hypothèse de départ pour arriver à des résultats. En effet, cette méthode  d'analyse de données utilise un pré-traitement des données qui permet la structuration et donc l'extraction de connaissances de façon beaucoup plus aisée. Le pré-traitement en question est divisé en plusieurs étapes. Celles-ci sont :
 \begin{description}
-\item[extraction]il faut d'abord récupérer les données à partir de sources, potentiellement multiples, hétérogènes et externes si cela n'a pas été fait au préalable.
-\item[nettoyage]il s'agit ensuite de détecter les anomalies éventuellement présentes dans le jeu de données constitué et d'y remédier.
-\item[transformation des données] il est ensuite utile de convertir tout les formats présents en un seul et unique, pour une utilisation optimale.
+\item[extraction] afin de récupérer les données à partir de sources, potentiellement multiples, hétérogènes et externes si cela n'a pas été fait au préalable.
+\item[nettoyage] pour détecter les anomalies éventuellement présentes dans le jeu de données constitué et d'y remédier.
+\item[transformation des données] afin de convertir tout les formats présents en un seul et unique, pour une utilisation optimale.
 \end{description}
 
-À la suite de cela, on peut envisager le chargement des données qui consiste entre autre à trier ces dernières selon certains critères que nous expliquerons plus en détails par la suite.
+À la suite de cela, on peut aborder la création de l'entrepôt de données (Data-Wharehouse) soit le chargement des données avec entre autre le tri de ces dernières selon certains critères préalablement définit que nous expliquerons plus en détails par la suite.
 
-Enfin, une fois toutes ces opérations réalisées, on obtient gr\^ace aux distances calculées plusieurs groupes de données (clusters) contenant des protéines de structures similaires.
+Enfin, une fois toutes ces opérations réalisées, on peut obtenir plusieurs groupes de données (clusters) contenant des protéines de structures similaires.
