modif intro, ajout prepa

--- a/rapport/intro.tex
+++ b/rapport/intro.tex
@@ -4,7 +4,7 @@
 \setcounter{page}{2}
 \addcontentsline{toc}{chapter}{Introduction}
 
-Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
+%Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
 
 Dans le cadre de l'UE Data Mining, nous avons pour projet de réaliser une étude sur la question suivante : "Quelles sont les protéines similaires" en utilisant les techniques et informations obtenues tout au long des cours et travaux dirigés.
 %Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
@@ -24,4 +24,4 @@ L'inter\^et de telles techniques tient particulièrement au fait qu'elles n'ont 
 
 À la suite de cela, on peut aborder la création de l'entrepôt de données (Data-Wharehouse) soit le chargement des données avec entre autre le tri de ces dernières selon certains critères préalablement définit que nous expliquerons plus en détails par la suite.
 
-Enfin, une fois toutes ces opérations réalisées, on peut obtenir plusieurs groupes de données (clusters) contenant des protéines de structures similaires.
+Enfin, une fois toutes ces opérations réalisées, on pourra s'occuper de la création des groupes de données (clusters) contenant des protéines similaires suivant le ou les critères choisis.
