--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -37,6 +37,14 @@
 \pagebreak
 \input{./intro.tex}
 \pagebreak
-\input{preparation.tex}
+\input{./creation.tex}
+\pagebreak
+\input{./exploitation.tex}
+\pagebreak
+\input{./result.tex}
+\pagebreak
+\input{./conclu.tex}
+\pagebreak
+\input{./biblio.tex}
 \pagebreak
 \end{document}
