--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1,3 +1,4 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% RAPPORT DE PROJET DATA MINING 2012 2013 BORDEAUX 1 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[12pt,a4paper]{report}
 \usepackage[utf8x]{inputenc}
 \usepackage{ucs}
