--- a/rapport/biblio.tex
+++ b/rapport/biblio.tex
@@ -1,3 +1,10 @@
 \section*{Bibliographie}
 
 \addcontentsline{toc}{chapter}{Bibliographie}
+
+\begin{itemize}
+\item http://www.anorexie-et-boulimie.fr/articles-20-les-proteines.htm
+\item http://ulpmultimedia.u-strasbg.fr/biochimie/didac15/dico/phi.htm
+\item http://fr.wikipedia.org/wiki/Propriétés\_ physico-chimiques\_ des\_ protéines
+
+\end{itemize}
