--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -40,7 +40,7 @@
 \pagebreak
 \input{./creation.tex}
 \pagebreak
-\input{./exploitation.tex}
+%\input{./exploitation.tex}
 \pagebreak
 \input{./result.tex}
 \pagebreak
