--- a/rapport/creation.tex
+++ b/rapport/creation.tex
@@ -59,7 +59,7 @@ Ainsi, nous avons choisi 7 niveaux de clusterisation:
 
 
 \subsubsection*{Taille de la chaîne}
-Les protéines sont constitués d'une succession d'acides aminés reliés entre eux par des liaisons peptidiques. La taille d'une protéine est ainsi définit par le nombr d'acides aminés qu'elle contient. Cette taille étant très variable, les protéines ayant des tailles très différentes n'auront pas les m\^emes proriétés, ce critère constitue donc un bon premier niveau de clusterisation.
+Les protéines sont constitués d'une succession d'acides aminés reliés entre eux par des liaisons peptidiques. La taille d'une protéine est ainsi définit par le nombre d'acides aminés qu'elle contient. Cette taille étant très variable, les protéines ayant des tailles très différentes n'auront pas les m\^emes proriétés, ce critère constitue donc un bon premier niveau de clusterisation.
 
 Pour déterminer la distance entre deux protéines, nous calculons la distance de Manhattan.% et créons des clusters de façon arbitraires, tout en tentant de maintenir un nombre equivalent de proteines dans chacun des groupes créés. Nous obtenons ainsi X clusters de x proteines en moyennes
 
