--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -13,6 +13,7 @@
 \usepackage{titlesec}
 \usepackage{cite}
 \usepackage{pdfpages}
+\usepackage[version=3]{mhchem}
 %\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 
 %%%%%%%%%%%%%%%%%encadrementdes chapitres%%%%%%%%%%%%%%%%%%%%%%%
@@ -40,12 +41,11 @@
 \pagebreak
 \input{./creation.tex}
 \pagebreak
-%\input{./exploitation.tex}
+\input{./exploitation.tex}
 \pagebreak
 \input{./result.tex}
 \pagebreak
 \input{./conclu.tex}
-\pagebreak
-\input{./biblio.tex}
+%\input{./biblio.tex}
 \pagebreak
 \end{document}
