--- a/rapport/result.tex
+++ b/rapport/result.tex
@@ -1,3 +1,14 @@
 \section*{Résultats}
 
 \addcontentsline{toc}{chapter}{Résultats}
+
+\subsection*{Comment analyser les résultats}
+
+\addcontentsline{toc}{section}{Comment analyser les résultats}
+
+
+
+\subsection*{Critique de notre méthode}
+
+\addcontentsline{toc}{section}{Critique de notre méthode}
+
